add background jquery and bootstrap

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,6 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <script type="text/css">
+            body {
+                background-image: url('../images/main-back.jpg') 481px 480px;
+                background-repeat: repeat;
+            }
+        </script>
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
