--- a/src/GarlicBlog/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/GarlicBlog/AppBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,7 @@
-Hello World!
+{% extends 'base.html.twig' %}
+
+{% block title %}Garlic Blog{% endblock %}
+
+{% block body %}
+    hello yaou!
+{% endblock %}
