--- a/src/GarlicBlog/AppBundle/Resources/views/Articles/article.html.twig
+++ b/src/GarlicBlog/AppBundle/Resources/views/Articles/article.html.twig
@@ -7,7 +7,7 @@
             <ul class="list-group">
                 <li class="list-group-item">
                     <h2 class="list-group-item-heading">Title of the article</h2>
-                    <div class="article-content-divider"></div>
+                    <div class="content-divider"></div>
                     <p>blablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbal<p>
                     <p>blablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbal<p>
                     <p>blablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbal<p>
@@ -19,9 +19,9 @@
                     <p>blablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbal<p>
                     <p>blablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbal<p>
                     <p>blablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbal<p>
-                    <div class="article-content-divider"></div>
+                    <div class="content-divider"></div>
                     <div class="article-footer"></div>
-                    <div class="article-content-divider"></div>
+                    <div class="content-divider"></div>
                     <div class="comments">
                         <div class="row">
                             <div class="col-md-2">
@@ -41,7 +41,7 @@
                             
                         </div>
                     <div>
-                    <div class="article-content-divider"></div>
+                    <div class="content-divider"></div>
                     <div class="row">
                         <div class="col-md-3">
                             <p class="list-group-item-heading">Add Comments</p>
