--- a/src/GarlicBlog/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/GarlicBlog/AppBundle/Resources/views/Default/index.html.twig
@@ -7,7 +7,20 @@
             <div class="panel panel-default">
                 
                 <div class="panel-heading">
-                <h3 class="panel-title">Sort by:</h3>
+                    <div class="row">
+                        <div class="col-md-5">
+                            <h2 class="panel-title">Sort by:</h2>
+                        </div>
+                        <div class="col-md-7">
+                            <select class="form-control" id="category_select">
+                                <option>Post Time</option>
+                                <option>Category</option>
+                                <option>Most liked</option>
+                            </select>
+                        </div>
+                    </div>
+                    
+                    
                 </div>
                 
                 <ul class="list-group">
@@ -36,9 +49,15 @@
             <ul class="list-group">
                   <li class="list-group-item">
                     <h4 class="list-group-item-heading">Title of the article</h4>
-                    <div class="article-content-divider"></div>
+                    <div class="content-divider"></div>
                     <p class="list-group-item-text" style="word-wrap: break-word;">blablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbal</p>
-                    <div class="article-content-divider"></div>
+                    <div class="content-divider"></div>
+                  </li>
+                  <li class="list-group-item">
+                    <h4 class="list-group-item-heading">Title of the article</h4>
+                    <div class="content-divider"></div>
+                    <p class="list-group-item-text" style="word-wrap: break-word;">blablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbal</p>
+                    <div class="content-divider"></div>
                   </li>
                   <div class="article-divider"></div>
                   <li class="list-group-item">
