--- a/src/GarlicBlog/AppBundle/Resources/views/layout.html.twig
+++ b/src/GarlicBlog/AppBundle/Resources/views/layout.html.twig
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="{{ asset_url }}" />
     {% endstylesheets %}
     
+    {% block extraStylesheets %}{% endblock %}
 {% endblock %}
 
 {% block body %}
@@ -18,7 +19,7 @@
         <div class="row-fluid">
             <div class="col-md-3">
                 <div class="navbar-header">
-                  <a class="navbar-brand" href="#">
+                  <a class="navbar-brand" href="/">
                     <img alt="Brand" src="">
                   </a>
                 </div>
@@ -34,18 +35,27 @@
             </div>
             
             <div class="col-md-2">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                      <ul class="dropdown-menu">
-                        <li><a href="#">Profile</a></li>
-                        <li><a href="#">Articles</a></li>
-                        <li><a href="#">Favorite</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Logout</a></li>
-                      </ul>
-                    </li>
-                </ul>
+                
+                    {% if userName is defined %}
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="dropdown">
+                              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ userName }} <span class="caret"></span></a>
+                              <ul class="dropdown-menu">
+                                <li><a href="/myProfile">Profile</a></li>
+                                <li><a href="/myArticles">Articles</a></li>
+                                <li><a href="#">Favorite</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="#">Logout</a></li>
+                              </ul>
+                            </li>
+                        </ul>
+                    {% else %}
+                        <div style="margin-top:8px">
+                            <button type="submit" class="btn btn-primary">Sign In</button>
+                            <button type="submit" class="btn btn-default">Sign Up</button>
+                        </div>
+                    {% endif %}
+                
             </div>
             
         </div>
