new style and handler for index page

--- a/src/GarlicBlog/AppBundle/Resources/public/css/main.css
+++ b/src/GarlicBlog/AppBundle/Resources/public/css/main.css
@@ -18,3 +18,10 @@ body {
   overflow: hidden;
   background-color: #e5e5e5;
 }
+#add_new_article:hover {
+    cursor: pointer;
+}
+#glyphicon_message {
+    margin-left: 2px;
+    margin-right: 10px;
+}
