--- a/src/GarlicBlog/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/GarlicBlog/AppBundle/Resources/views/Default/index.html.twig
@@ -7,20 +7,15 @@
             <div class="panel panel-default">
                 
                 <div class="panel-heading">
-                    <div class="row">
-                        <div class="col-md-5">
-                            <h2 class="panel-title">Sort by:</h2>
-                        </div>
-                        <div class="col-md-7">
+                        <label>Sort by:</label>
+                        <span>
                             <select class="form-control" id="category_select">
                                 <option>Post Time</option>
                                 <option>Category</option>
                                 <option>Most liked</option>
                             </select>
-                        </div>
-                    </div>
-                    
-                    
+                        
+                        </span>
                 </div>
                 
                 <ul class="list-group">
@@ -47,31 +42,120 @@
         
         <div class="col-md-6" id="blog_list">
             <ul class="list-group">
-                  <li class="list-group-item">
-                    <h4 class="list-group-item-heading">Title of the article</h4>
-                    <div class="content-divider"></div>
-                    <p class="list-group-item-text" style="word-wrap: break-word;">blablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbal</p>
-                    <div class="content-divider"></div>
-                  </li>
-                  <li class="list-group-item">
-                    <h4 class="list-group-item-heading">Title of the article</h4>
-                    <div class="content-divider"></div>
-                    <p class="list-group-item-text" style="word-wrap: break-word;">blablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbal</p>
-                    <div class="content-divider"></div>
+                  <li class="list-group-item" id="add_new_article">
+                      <div class="row-fluid">
+                        <h3>
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            <span id="glyphicon_message">Write something today?</span>
+                        </h3>
+                      </div>
                   </li>
                   <div class="article-divider"></div>
+                  
                   <li class="list-group-item">
-                    <h4 class="list-group-item-heading">Title of the article</h4>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h4>Title of the article</h4>
+                        </div>
+                    </div>
+                    <div class="row-fluid">
+                        <div class="author col-md-offset-3">
+                            <p> --Yaou </p>
+                        </div>
+                        <div class="pull-right">
+                            <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
+                            <span id="glyphicon_message">Favorite</span>
+                        </div>
+                        <div class=" pull-right">
+                            <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+                            <span id="glyphicon_message">12345</span>
+                        </div>
+                    </div>
+                    
+                    <div class="content-divider"></div>
                     <p class="list-group-item-text" style="word-wrap: break-word;">blablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbal</p>
+                    <div class="content-divider"></div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <p>
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                <span id="post_message">Comment</span>
+                            </p>
+                        </div>
+                        
+                    </div>
                   </li>
+                  <div class="article-divider"></div>
+                  
                   <li class="list-group-item">
-                    <h4 class="list-group-item-heading">Title of the article</h4>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h4>Title of the article</h4>
+                        </div>
+                    </div>
+                    <div class="row-fluid">
+                        <div class="author col-md-offset-3">
+                            <p> --Yaou </p>
+                        </div>
+                        <div class="pull-right">
+                            <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
+                            <span id="glyphicon_message">Favorite</span>
+                        </div>
+                        <div class=" pull-right">
+                            <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+                            <span id="glyphicon_message">12345</span>
+                        </div>
+                    </div>
+                    
+                    <div class="content-divider"></div>
                     <p class="list-group-item-text" style="word-wrap: break-word;">blablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbal</p>
+                    <div class="content-divider"></div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <p>
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                <span id="post_message">Comment</span>
+                            </p>
+                        </div>
+                        
+                    </div>
                   </li>
+                  <div class="article-divider"></div>
+                  
                   <li class="list-group-item">
-                    <h4 class="list-group-item-heading">Title of the article</h4>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h4>Title of the article</h4>
+                        </div>
+                    </div>
+                    <div class="row-fluid">
+                        <div class="author col-md-offset-3">
+                            <p> --Yaou </p>
+                        </div>
+                        <div class="pull-right">
+                            <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
+                            <span id="glyphicon_message">Favorite</span>
+                        </div>
+                        <div class=" pull-right">
+                            <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+                            <span id="glyphicon_message">12345</span>
+                        </div>
+                    </div>
+                    
+                    <div class="content-divider"></div>
                     <p class="list-group-item-text" style="word-wrap: break-word;">blablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbalblablablablbal</p>
+                    <div class="content-divider"></div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <p>
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                <span id="post_message">Comment</span>
+                            </p>
+                        </div>
+                        
+                    </div>
                   </li>
+                  <div class="article-divider"></div>
             </ul>
         </div>
         
