--- a/src/GarlicBlog/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/GarlicBlog/AppBundle/Resources/views/Default/index.html.twig
@@ -45,7 +45,7 @@
                   <li class="list-group-item" id="add_new_article">
                       <div class="row-fluid">
                         <h3>
-                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
                             <span id="glyphicon_message">Write something today?</span>
                         </h3>
                       </div>
