--- a/src/GarlicBlog/AppBundle/Resources/views/layout.html.twig
+++ b/src/GarlicBlog/AppBundle/Resources/views/layout.html.twig
@@ -44,14 +44,14 @@
                                 <li><a href="/myArticles">Articles</a></li>
                                 <li><a href="#">Favorite</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li><a href="#">Logout</a></li>
+                                <li><a href="/logout">Logout</a></li>
                               </ul>
                             </li>
                         </ul>
                     {% else %}
                         <div style="margin-top:8px">
-                            <button type="submit" class="btn btn-primary">Sign In</button>
-                            <button type="submit" class="btn btn-default">Sign Up</button>
+                            <a href="/login" class="btn btn-primary">Sign In</a>
+                            <a href="/register" class="btn btn-default">Sign Up</a>
                         </div>
                     {% endif %}
                 
