register form and auto login

--- a/src/GarlicBlog/UserBundle/Resources/views/Default/login.html.twig
+++ b/src/GarlicBlog/UserBundle/Resources/views/Default/login.html.twig
@@ -19,7 +19,6 @@
             </div>
             
             <div class="row">
-                <div class="col-md-12">
                     
                     <ul class="list-group">
                         <li class="list-group-item">
@@ -35,7 +34,7 @@
                                 <br>
                                 <div class="input-group">
                                     <span class="input-group-addon" id="basic-addon1">
-                                        <span class="glyphicon glyphicon-cog"></span>
+                                        <span class="glyphicon glyphicon-lock"></span>
                                     </span>                            
                                     <input type="password" class="form-control" id="password" name="_password" placeholder="Password"/>
                                 </div>
@@ -59,9 +58,9 @@
                             <br>
                         </li>
                     </ul>
-                    
-                </div>
+                
             </div>
+            
         </div>
     </div>
     
