--- a/src/GarlicBlog/UserBundle/Resources/views/Default/register.html.twig
+++ b/src/GarlicBlog/UserBundle/Resources/views/Default/register.html.twig
@@ -1,8 +1,69 @@
-{{ form_start(form) }}
-    {{ form_row(form.username) }}
-    {{ form_row(form.email) }}
-    {{ form_row(form.plainPassword.first) }}
-    {{ form_row(form.plainPassword.second) }}
+{% extends 'GarlicBlogUserBundle::base.html.twig' %}
 
-    <button type="submit">Register!</button>
-{{ form_end(form) }}
+{% block extraStylesheets %}
+    
+    {% stylesheets 
+        '@GarlicBlogUserBundle/Resources/public/css/login.css' %}
+        <link rel="stylesheet" href="{{ asset_url }}" media="screen" />
+    {% endstylesheets %}
+
+{% endblock %}
+
+{% block body %}
+    <div class="row-fluid">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <h1> Garlic Blog </h1>
+                </div>
+            </div>
+            
+            <div class="row">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <br>
+                        {{ form_start(form) }}
+                            <br>
+                            <div class="input-group">
+                                <span class="input-group-addon" id="basic-addon1">
+                                    <span class="glyphicon glyphicon-user"></span>
+                                </span>
+                                <input type="text" id="user_username" name="user[username]" class="form-control" required="required" placeholder="Username">
+                            </div>
+                            <br>
+                            <div class="input-group">
+                                <span class="input-group-addon" id="basic-addon1">
+                                    <span class="glyphicon glyphicon-envelope"></span>
+                                </span>
+                                <input type="email" id="user_email" name="user[email]" class="form-control" required="required" placeholder="Email">
+                            </div>
+                            <br>
+                            <div class="input-group">
+                                <span class="input-group-addon" id="basic-addon1">
+                                    <span class="glyphicon glyphicon-lock"></span>
+                                </span>
+                                <input type="password" class="form-control" id="user_plainPassword_first" name="user[plainPassword][first]" required="required" placeholder="Password">
+                            </div>
+                            <br>
+                            <div class="input-group">
+                                <span class="input-group-addon" id="basic-addon1">
+                                    <span class="glyphicon glyphicon-lock"></span>
+                                </span>
+                                <input type="password" class="form-control" id="user_plainPassword_second" name="user[plainPassword][second]" required="required" placeholder="Confirm Password">
+                            </div>
+
+                            {{ form_row(form._token) }}
+                            <br>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <button type="submit" class="btn btn-primary pull-right">Register</button>
+                                </div>
+                            </div>
+                            <br>
+                        </form>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+{% endblock %}
